--- a/index.html
+++ b/index.html
@@ -21,5 +21,6 @@
       />
       <button type="submit" class="btn">Submit</button>
     </form>
+    <script src="index.js"></script>
   </body>
 </html>
